# cupola

./: .gitignore  CMakeLists.txt  README.md
src/: GitBackend.cpp  GitBackend.h  GitCredentialsManager.cpp  GitCredentialsManager.h  PersistenceManager.cpp  PersistenceManager.h  Repository.cpp  Repository.h  RepositoryListModel.cpp  RepositoryListModel.h  main.cpp  main.qml  qml.qrc
